crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_alias_indent_equals.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type alias box\n= int"
---
nash::syntax

  × Expected `=` in the type alias.
   ╭─[src/Main.nash:2:1]
 1 │ type alias box
 2 │ = int
   · ─
   ╰────
  help: Write `type alias Name = Type`.
