crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_alias_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a name after `type alias`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Name the alias before its parameters and body.
