crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_alias_param.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
MISSING TYPE PARAMETER

  × I was parsing a type parameter, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Type parameters start with a quote, such as 'a. A representation annotation
        looks like ('a : Storable).
