crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_alias_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type alias\tbox = int"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:11]
 1 │ type alias  box = int
   ·           ──
   ╰────
  help: Replace the tab with spaces.
