crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_context.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : Eq 'a => "
---
nash::syntax

  × Invalid type constraint.
   ╭─[src/Main.nash:1:14]
 1 │ f : Eq 'a => 
   ·              ─
   ╰────
  help: Write `Trait args => type`; enclose multiple constraints in parentheses,
        separated by commas.
