crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_indent_after_context.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : Eq 'a =>\nint"
---
nash::syntax

  × Expected a type after `=>`.
   ╭─[src/Main.nash:2:1]
 1 │ f : Eq 'a =>
 2 │ int
   · ─
   ╰────
  help: Indent the type to continue the annotation.
