crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_indent_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNFINISHED TYPE ANNOTATION

  × I was partway through parsing a type annotation, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see a type next. Try putting int or string for now?

        Note: I can get confused by indentation. If you think there is already a type
        next, maybe it is not indented enough?
