crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_param_colon.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I have the type parameter name, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Put a colon between the type parameter and its representation bound, as in ('a :
        Storable).
