crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_param_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ┬
   ·   ╰── expected `)`
   ╰────
  help: Add `)` here.
