crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_param_indent_colon.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box ('a\n: Term) = Box"
---
nash::syntax

  × Expected `:` after the type parameter.
   ╭─[src/Main.nash:2:1]
 1 │ type box ('a
 2 │ : Term) = Box
   · ─
   ╰────
  help: Write `('a : Storable)` to specify a representation bound.
