crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_param_indent_repr.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I just saw a colon after the type parameter, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a representation bound such as Storable, indented inside the parentheses.
